<resources>
    <string name="app_name">Depression Tracker</string>
    <string name="history">History</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="backup_now">Backup Now</string>

    <!-- Questions -->
    <string name="question1_text">"Little interest or pleasure in doing things, withdrawn"</string>
    <string name="question2_text">"Down, depressed, or hopeless/ tightness/heaviness in chest"</string>
    <string name="question3_text">"Trouble sleeping or sleeping too much, hard to get out of bed"</string>
    <string name="question4_text">"Tired or little energy"</string>
    <string name="question5_text">"Poor appetite or overeating"</string>
    <string name="question6_text">"Feeling bad about yourself"</string>
    <string name="question7_text">"Trouble concentrating"</string>
    <string name="question8_text">"Noticeably moving or speaking slowly or being fidgety or restless"</string>
    <string name="question9_text">"Self-harm thoughts"</string>
    <string name="question10_text">"Feeling nervous, anxious, or on edge"</string>
    <string name="question11_text">"Worrying too much about different things"</string>
    <string name="question12_text">"Not being able to stop or control worrying"</string>
    <string name="question13_text">"Trouble relaxing"</string>
    <string name="question14_text">"Being so restless that it's hard to sit still"</string>
    <string name="question15_text">"Becoming easily annoyed or irritable"</string>
    <string name="question16_text">"Feeling afraid as if something awful might happen"</string>

    <!-- Difficulty -->
    <string name="difficulty_not_at_all">Not at all</string>
    <string name="difficulty_somewhat">Somewhat</string>
    <string name="difficulty_very">Very</string>
    <string name="difficulty_extremely">Extremely</string>

    <!-- Settings -->
    <string name="settings">Settings</string>
    <string name="settings_key_spreadsheet_id">settings_spreadsheet_id</string>
    <string name="settings_key_sheet_id">settings_sheet_id</string>
    <string name="settings_key_auto_backup">settings_auto_backup</string>
    <string name="settings_key_theme">settings_theme</string>
    <string name="settings_title_spreadsheet_id">Spreadsheet ID</string>
    <string name="settings_title_sheet_id">Current sheet ID</string>
    <string name="settings_title_auto_backup">Auto backup new expenses</string>
    <string name="settings_title_theme">Choose theme</string>
    <string name="settings_summary_spreadsheet_id">Spreadsheet ID</string>
    <string name="settings_summary_sheet_id">Current sheet ID</string>
    <string name="settings_summary_auto_backup">Auto backup new expenses</string>
    <string name="settings_summary_theme">Theme</string>

    <!-- Add Data -->
    <string name="content_description_button_previous">button previous</string>
    <string name="content_description_button_next">button next</string>
</resources>
