<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btn_prev"
        android:layout_width="@dimen/button_size_large"
        android:layout_height="@dimen/button_size_large"
        android:layout_marginStart="@dimen/margin_medium"
        android:contentDescription="@string/content_description_button_previous"
        android:tint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_prev" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="@dimen/button_size_large"
        android:layout_height="@dimen/button_size_large"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/content_description_button_next"
        android:tint="?attr/colorControlNormal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_next" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_question"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_extra_extra_large"
        android:gravity="center"
        android:textSize="@dimen/text_extra_extra_extra_large"
        app:layout_constraintBottom_toTopOf="@id/list_answers"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintStart_toEndOf="@id/btn_prev"
        tools:text="@string/question1_text" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/list_answers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/btn_next"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintStart_toEndOf="@id/btn_prev"
        app:layout_constraintTop_toTopOf="@id/btn_next"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAllCaps="true" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textAllCaps="true" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/list_difficulties"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_extra_extra_large"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btn_next"
        app:layout_constraintStart_toEndOf="@id/btn_prev"
        app:layout_constraintTop_toBottomOf="@id/list_answers"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_not_at_all"
            android:textAllCaps="true" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_somewhat"
            android:textAllCaps="true" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_very"
            android:textAllCaps="true" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty_extremely"
            android:textAllCaps="true" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
